Change of theme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Add to Cart</title>
+        <title>Adventure Time</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +15,9 @@
     </head>
     <body>
         <main>
-            <img src="assets/DrinkingCat.png" alt="cat">
-            <input type="text" id="input-field" placeholder="Bread">
-            <button id="add-button">Add to cart</button>
+            <img src="assets/Explore.png" alt="cat">
+            <input type="text" id="input-field" placeholder="What's your next adventure?">
+            <button id="add-button">Add to list</button>
             <ul id="shopping-list">
             </ul>
         </main>
