--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <main>
-            <img src="assets/Explore.png" alt="cat">
+            <img src="assets/earth.png" alt="cat">
             <input type="text" id="input-field" placeholder="What's your next adventure?">
             <button id="add-button">Add to list</button>
             <ul id="shopping-list">
